--- a/index.html
+++ b/index.html
@@ -69,49 +69,190 @@
 
 		<main>
 			<section class="banner">
-			<div class="container">
-                	<div class="row">
-					<div class="col-md-6">
-						<div class="d-flex flex-column justify-content-center align-items-center h-100">
-							<h1 class="display-2 fw-bold text-blue">
-								Show case your app beautifully
-							</h1>
-							<p class="fs-5">
-								Lorem ipsum dolor sit amet, consectetur
-								adipisicing elit. Numquam, officiis. Quo optio
-								itaque illo voluptatibus architecto, iste atque
-								voluptate maiores.
-							</p>
+				<div class="container">
+					<div class="row">
+						<div class="col-md-6">
+							<div
+								class="d-flex flex-column justify-content-center align-items-center h-100"
+							>
+								<h1 class="display-2 fw-bold text-blue">
+									Show case your app beautifully
+								</h1>
+								<p class="fs-5">
+									Lorem ipsum dolor sit amet, consectetur
+									adipisicing elit. Numquam, officiis. Quo
+									optio itaque illo voluptatibus architecto,
+									iste atque voluptate maiores.
+								</p>
 
-							<div>
-								<a href="">
-									<img src="./img/google-play.png" alt="" />
-								</a>
+								<div>
+									<a href="">
+										<img
+											src="./img/google-play.png"
+											alt=""
+										/>
+									</a>
 
-								<a href="">
-									<img src="./img/app-store.png" alt="" />
-								</a>
+									<a href="">
+										<img src="./img/app-store.png" alt="" />
+									</a>
+								</div>
+							</div>
+						</div>
+						<div class="col-md-6">
+							<div
+								class="d-flex justify-content-center align-items-center py-3"
+							>
+								<img src="./img/banner.png" alt="" />
 							</div>
 						</div>
 					</div>
-					<div class="col-md-6">
-						<div
-							class="d-flex justify-content-center align-items-center py-3"
-						>
-							<img src="./img/banner.png" alt="" />
-						</div>
-					</div>
 				</div>
-            </div>
 			</section>
 
 			<section>
-				<div class="background-gradient d-flex flex-column justify-content-center align-items-center py-5">
+				<div
+					class="background-gradient d-flex flex-column justify-content-center align-items-center py-5"
+				>
 					<h1 class="text-center w-50 text-white mb-4">
 						"An intuitive solution to a common problem that we all
 						face, wrapped up in a single app!"
 					</h1>
-                    <img height="50px" src="./img/tnw-logo.svg" alt="">
+					<img height="50px" src="./img/tnw-logo.svg" alt="" />
+				</div>
+			</section>
+
+			<!-- Feature -->
+
+			<section id="#feature">
+				<div class="container">
+					<div class="row">
+						<div class="col-md-5">
+							<div class="py-5">
+                                <img src="./img/phone.png" alt="" />
+                            </div>
+						</div>
+						<div class="col-md-7">
+							<div class="row">
+								<div class="col-md-6">
+									<div
+										class="my-2 border p-1 d-flex flex-column align-items-center justify-content-center"
+									>
+										<svg
+											xmlns="http://www.w3.org/2000/svg"
+											width="80px"
+											class="background-gradient rounded-circle text-white p-2"
+											fill="none"
+											viewBox="0 0 24 24"
+											stroke="currentColor"
+											stroke-width="2"
+										>
+											<path
+												stroke-linecap="round"
+												stroke-linejoin="round"
+												d="M12 18h.01M8 21h8a2 2 0 002-2V5a2 2 0 00-2-2H8a2 2 0 00-2 2v14a2 2 0 002 2z"
+											/>
+										</svg>
+
+										<h1 class="text-center my-3">
+											Device Mockups
+										</h1>
+										<p class="text-center">
+											Ready to use HTML/CSS mockups, no
+											Photoshop required!
+										</p>
+									</div>
+								</div>
+								<div class="col-md-6">
+									<div
+										class="my-2 border p-1 d-flex flex-column align-items-center justify-content-center"
+									>
+										<svg
+											xmlns="http://www.w3.org/2000/svg"
+											width="80px"
+											class="background-gradient rounded-circle text-white p-2"
+											fill="none"
+											viewBox="0 0 24 24"
+											stroke="currentColor"
+											stroke-width="2"
+										>
+											<path
+												stroke-linecap="round"
+												stroke-linejoin="round"
+												d="M12 18h.01M8 21h8a2 2 0 002-2V5a2 2 0 00-2-2H8a2 2 0 00-2 2v14a2 2 0 002 2z"
+											/>
+										</svg>
+
+										<h1 class="text-center my-3">
+											Device Mockups
+										</h1>
+										<p class="text-center">
+											Ready to use HTML/CSS mockups, no
+											Photoshop required!
+										</p>
+									</div>
+								</div>
+								<div class="col-md-6">
+									<div
+										class="my-2 border p-1 d-flex flex-column align-items-center justify-content-center"
+									>
+										<svg
+											xmlns="http://www.w3.org/2000/svg"
+											width="80px"
+											class="background-gradient rounded-circle text-white p-2"
+											fill="none"
+											viewBox="0 0 24 24"
+											stroke="currentColor"
+											stroke-width="2"
+										>
+											<path
+												stroke-linecap="round"
+												stroke-linejoin="round"
+												d="M12 18h.01M8 21h8a2 2 0 002-2V5a2 2 0 00-2-2H8a2 2 0 00-2 2v14a2 2 0 002 2z"
+											/>
+										</svg>
+
+										<h1 class="text-center my-3">
+											Device Mockups
+										</h1>
+										<p class="text-center">
+											Ready to use HTML/CSS mockups, no
+											Photoshop required!
+										</p>
+									</div>
+								</div>
+								<div class="col-md-6">
+									<div
+										class="my-2 border p-1 d-flex flex-column align-items-center justify-content-center"
+									>
+										<svg
+											xmlns="http://www.w3.org/2000/svg"
+											width="80px"
+											class="background-gradient rounded-circle text-white p-2"
+											fill="none"
+											viewBox="0 0 24 24"
+											stroke="currentColor"
+											stroke-width="2"
+										>
+											<path
+												stroke-linecap="round"
+												stroke-linejoin="round"
+												d="M12 18h.01M8 21h8a2 2 0 002-2V5a2 2 0 00-2-2H8a2 2 0 00-2 2v14a2 2 0 002 2z"
+											/>
+										</svg>
+
+										<h1 class="text-center my-3">
+											Device Mockups
+										</h1>
+										<p class="text-center">
+											Ready to use HTML/CSS mockups, no
+											Photoshop required!
+										</p>
+									</div>
+								</div>
+							</div>
+						</div>
+					</div>
 				</div>
 			</section>
 		</main>
